tests/baselines/reference/parserUnterminatedGeneric2.errors.txt
parserUnterminatedGeneric2.ts(2,5): error TS1435: Unknown keyword or identifier. Did you mean 'interface ICompiledExpression'?
parserUnterminatedGeneric2.ts(2,5): error TS2304: Cannot find name 'interfaceICompiledExpression'.
parserUnterminatedGeneric2.ts(3,42): error TS1005: '=>' expected.
parserUnterminatedGeneric2.ts(4,9): error TS2304: Cannot find name 'assign'.
parserUnterminatedGeneric2.ts(4,16): error TS2304: Cannot find name 'context'.
parserUnterminatedGeneric2.ts(4,23): error TS1005: ',' expected.
parserUnterminatedGeneric2.ts(4,25): error TS2693: 'any' only refers to a type, but is being used as a value here.
parserUnterminatedGeneric2.ts(4,30): error TS2304: Cannot find name 'value'.
parserUnterminatedGeneric2.ts(4,35): error TS1005: ',' expected.
parserUnterminatedGeneric2.ts(4,37): error TS2693: 'any' only refers to a type, but is being used as a value here.
parserUnterminatedGeneric2.ts(4,41): error TS1005: ';' expected.
parserUnterminatedGeneric2.ts(4,43): error TS2693: 'any' only refers to a type, but is being used as a value here.
parserUnterminatedGeneric2.ts(8,23): error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
parserUnterminatedGeneric2.ts(8,45): error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
parserUnterminatedGeneric2.ts(8,54): error TS1005: '>' expected.


==== parserUnterminatedGeneric2.ts (15 errors) ====
    declare module ng {
        interfaceICompiledExpression {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1435: Unknown keyword or identifier. Did you mean 'interface ICompiledExpression'?
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'interfaceICompiledExpression'.
            (context: any, locals?: any): any;
                                             ~
!!! error TS1005: '=>' expected.
            assign(context: any, value: any): any;
            ~~~~~~
!!! error TS2304: Cannot find name 'assign'.
                   ~~~~~~~
!!! error TS2304: Cannot find name 'context'.
                          ~
!!! error TS1005: ',' expected.
                            ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
                                 ~~~~~
!!! error TS2304: Cannot find name 'value'.
                                      ~
!!! error TS1005: ',' expected.
                                        ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
                                            ~
!!! error TS1005: ';' expected.
                                              ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
        }
    
        interface IQService {
            all(promises: IPromise < any > []): IPromise<
                          ~~~~~~~~
!!! error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
                                                ~~~~~~~~
!!! error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
                                                         
!!! error TS1005: '>' expected.